# clean-air-project

./: .gitignore  README.md  conftest.py  environment.yaml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
JupyternotebookDemos/: aircraft_tracks_demo.ipynb
clean_air/: models.py  serialisation.py
clean_air/data/: data_store_access.ipynb  data_subset.py  static_aurn_site_data.md  storage.py
clean_air/util/: dataframe_converter.py  file_converter.py
clean_air/visualise/: generate_map_based_visualisations.py
clean_air/visualise/assets/: AURN.html  AircraftTrack.html
docs/: README.md
docs/src/: Makefile
src/clean_air/: __init__.py  exceptions.py  models.py  serialisation.py
src/clean_air/data/: __init__.py  data_filter_handler.py  data_store_access.ipynb  data_subset.py  extract_metadata.py  metadata_handler.py  models.py  serialisation.py  storage.py
src/clean_air/util/: conversion_lists.py  cubes.py  file_converter.py
src/clean_air/visualise/: dataset_renderer.py  generate_map_based_visualisations.py  render_plot.py
src/clean_air/visualise/assets/: AURN.html  boundaries.html
tests/assets/: aircraft.nc
tests/integration/data/: test_extract_metadata.py  test_pytest.py
tests/integration/util/: test_file_converter.py
tests/integration/visualise/: test_dataset_renderer.py  test_generate_map_based_visualisations.py  test_render_map.py  test_render_plot.py
tests/unit/: test_models.py  test_models_duration.py  test_serialisation.py
tests/unit/base/: test_models.py  test_models_duration.py  test_serialisation.py
tests/unit/data/: test_data_subset.py  test_extract_metadata.py  test_metadata_handler.py  test_models.py  test_models_duration.py  test_serialisation.py  test_storage.py
tests/unit/util/: test_crs.py  test_cubes.py  test_dataframe_converter.py  test_file_converter.py
tests/unit/visualise/: test_dataset_renderer.py  test_generate_map_based_visualisations.py
